test/inference/good/coreml_exists.mlt
let main = ({'a} fun x -> (x : 'a)) 42