test/inference/bad/coreml_app.mlt
let main = (fun x -> x) 42 ()